[gd_scene load_steps=4 format=2]

[ext_resource path="res://crafting_menu/Lobby.gd" type="Script" id=1]
[ext_resource path="res://assets/Others/back_button.png" type="Texture" id=2]
[ext_resource path="res://fonts/Helvetica-Bold-36.tres" type="DynamicFont" id=3]

[node name="Control2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = -1.0
margin_right = 1024.0
margin_bottom = 599.0
color = Color( 0.243278, 0.534706, 0.558594, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 193.0
margin_top = 130.0
margin_right = 837.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 1, 1 )
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Host" type="Button" parent="VBoxContainer"]
margin_right = 644.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Host A Game"

[node name="Join" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 644.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Join A Game"

[node name="Local" type="Button" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 644.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Single Player Game"

[node name="LobbyPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = 68.0
margin_right = 110.0
margin_bottom = 152.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="AddressLabel" type="Label" parent="LobbyPanel"]
margin_left = 10.0
margin_top = 5.0
margin_right = 160.0
margin_bottom = 24.0
text = "Enter Host/IP Address"
align = 1

[node name="Address" type="LineEdit" parent="LobbyPanel"]
margin_left = 10.0
margin_top = 27.0
margin_right = 210.0
margin_bottom = 56.0
text = "127.0.0.1"

[node name="OkButton" type="Button" parent="LobbyPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 18.0
margin_right = -9.0
margin_bottom = 38.0
text = "OK"

[node name="TextPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = 163.0
margin_right = 148.0
margin_bottom = 186.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="StatusOk" type="Label" parent="TextPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -9.5
margin_right = 60.0
margin_bottom = 9.5
size_flags_horizontal = 2

[node name="StatusFail" type="Label" parent="TextPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -9.5
margin_right = 100.0
margin_bottom = 9.5
size_flags_horizontal = 2

[node name="PortForward" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -157.5
margin_top = -99.0
margin_right = 157.5
margin_bottom = -30.0
text = "Make sure all players use the 
port 12112 in UDP 

(Default is 12112 if you don't revise)"
align = 1

[node name="ColorRect" type="ColorRect" parent="PortForward"]
show_behind_parent = true
light_mask = 2
margin_left = -5.0
margin_right = 315.0
margin_bottom = 70.0
color = Color( 0.2, 0.027451, 0.027451, 1 )

[node name="Back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 443.0
margin_top = 231.0
margin_right = 2443.0
margin_bottom = 2231.0
rect_scale = Vector2( 0.03, 0.03 )

[node name="TextureRect" type="TextureRect" parent="Back"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -967.0
margin_top = -933.0
margin_right = 1066.0
margin_bottom = 1067.0
texture = ExtResource( 2 )

[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="VBoxContainer/Local" to="." method="_on_Local_pressed"]
[connection signal="text_entered" from="LobbyPanel/Address" to="." method="_on_Address_text_entered"]
[connection signal="pressed" from="LobbyPanel/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
